Set asset bundle name in AssetBundle constructor
Due to default name being used it causes a bit of trouble overriding
when there are multiple assetbundles configured. see
https://github.com/dropwizard/dropwizard/issues/499

Changed to always have an assetname that's not default.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <compile.level>1.7</compile.level>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Runtime Library Versions -->
         <dropwizard.version>0.7.1</dropwizard.version>
