--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,18 @@
         <javadoc.exclude.packages>net.ozwolf.raml.model:net.ozwolf.raml.resources:net.ozwolf.raml.utils:net.ozwolf.raml.views</javadoc.exclude.packages>
     </properties>
 
-    <repositories>
+    <distributionManagement>
         <repository>
-            <id>mulesoft-releases</id>
-            <name>MuleSoft Releases Repository</name>
-            <url>http://repository.mulesoft.org/releases/</url>
+            <id>sonatype</id>
+            <name>Sonatype Staging</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
-    </repositories>
+        <snapshotRepository>
+            <id>sonatype</id>
+            <name>Sonatype Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <dependencies>
         <!-- Runtime Libraries -->
