--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
     - SONATYPE_USERNAME=OzWolf
     - secure: "UAO80wmX5J05DqaK3Tb1E05c1opmSLg8w+auzY7em6ZcwKXeSMiQ91rSWoXOOHx2m5/Bh82lZkgASNOgyKPI39jNDm5wo0EnsCxRGgs7tYyXhgNGsN1AiAr+IjY4yojFvfx1V3milIx4NZTQDhL9VHHVDXoLc0+qEXBQc2RmQTw="
 
-script: mvn clean deploy --settings travis-settings.xml
+script: mvn clean source:jar deploy --settings travis-settings.xml
 
 notifications:
   email:
