--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
 language: java
 jdk:
 - oraclejdk8
-env:
-  global:
-  - SONATYPE_USERNAME=OzWolf
-  - secure: VFWko4Bwwegmcb3krloK169xRqvXs3O9VAAk+SqZqGn7lDIUDNujrhguYbKF3+MYhywDcKZ4mNB9i4eKzjoeiUiwf1mfinUT+0Tr57KqojXHM2yH4HrxK8bqzgu24oPYPWnTqVZnBpZoIyZAbbcaRcCtm0Ir4TsgHc2/rJGuipU=
-  - secure: OJofjkAn73LJephLssj5/f6t0xCxg2Hy7Hid0KL/kabM7II666B6Gp8uIfIHNB6WaSWmunCfboCU1W1eEEQVzx3ypRXiYOpf78MZ+sk3EGnwqToD6kKjUNoqXHNXFeXE/J7MXSfgQa90d6xXf8hBTNkoMpOWc1eHA3k6UKWDjZA=
-
-script: mvn clean source:jar deploy --settings travis-settings.xml -Dgpg.passphrase=${GPG_PASSPHRASE}
 notifications:
   email:
   - ozwolf@gmail.com
+env:
+  global:
+  - GPGDIR="`pwd`/gpg"
+  - secure: AMTKaoNInoDmk6IyD9gnD6k3bbYhYgYXN7ah68tjKLCcPBC0lwRrLIsNXFrykcyBRQ0xpD70VbkdAw9LMRE945C0Qq1BI01sI01K7c9gXx++nuRjHPP6nVB4/gt/6qicZmzBmDHdrPkGetdjRcP6/9wUIBk4R1jwGJQQQQ/bWd4=
+  - secure: gH3G8FZUXeeYcsJRlxAhnlTNbJBkUkjXyn4FynFB+xPBTuF0EMrghTZ5JS09/6KgjD5q0PwEPaLgf9ZQVQivKsVIIULfKFqPt6dzu4lxSPHakXZL+rCI1CegKq0zjIS3Dr0zodZgLNgHJPmX80vfJqBNYdbqvC9EhZBL6s7piQQ=
+  - secure: cyTbvtjX05grQA4GNtrFfICOyXW3ugdki4lc8hrQ2yVrVs4D/fr7vQUdA4qCLyXIipYESUZuE/Ia6P/HG62E3gKOobejhXnB1DMYUaTso7CFfi42mgZLuBZm2mb4cHqu1ZErhdUqps7wbzmNbb3wpQAIUYoTACc2v/GMmg0fyzg=
+  - secure: MyldhZUtEVP6OvSTIRRV3xB4ZUSpJDsaAcq5hPZeU9s8iz05+SeVwonvJTVNA+SGdTq3Ad1r00LfnPrBrZIiD1dGJ+qfcxH20bONB3Rb0mi6Ts960nlqAdSMC7tpKtX/5JR0zXrA/c+wzEmgaTvdIsndxLG/223FYFoQ9E7XfGY=
+  - secure: I4lq4t+FecQ7xUwfyHDgPtDtP2LUmb2a/03H1bDgvvBcEwJHuCxuFTFYvtgv2tpPm/4eHvGoD9EGCkDksmYuMIbEVpoXw71ZmteXRwtj2EaHdpdvhFTZLZ4fIn94bTJxRz6csXRiZhjVClUWU/u5w+i9V/D7PiolZYZaNmXDQPw=
+
+after_success:
+  - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in $GPG_DIR/pubring.gpg.enc -out $GPG_DIR/pubring.gpg -d
+  - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in $GPG_DIR/secring.gpg.enc -out $GPG_DIR/secring.gpg -d
+  - mvn -P ossrh clean source:jar deploy --settings travis-settings.xml
