--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,9 @@
 
         <!-- JavaDoc Information -->
         <javadoc.title>DropWizard RAML API Bundle</javadoc.title>
-        <javadoc.exclude.packages>net.ozwolf.raml.model:net.ozwolf.raml.resources:net.ozwolf.raml.utils:net.ozwolf.raml.views</javadoc.exclude.packages>
+        <javadoc.exclude.packages>
+            net.ozwolf.raml.model:net.ozwolf.raml.resources:net.ozwolf.raml.utils:net.ozwolf.raml.views
+        </javadoc.exclude.packages>
     </properties>
 
     <developers>
@@ -52,12 +54,12 @@
 
     <distributionManagement>
         <repository>
-            <id>sonatype</id>
+            <id>ossrh</id>
             <name>Sonatype Staging</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
         <snapshotRepository>
-            <id>sonatype</id>
+            <id>ossrh</id>
             <name>Sonatype Snapshots</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
@@ -190,19 +192,40 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>ossrh</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.7</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
