--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ jdk:
 notifications:
   email:
   - ozwolf@gmail.com
+
 env:
   global:
   - GPG_DIR="`pwd`/gpg"
@@ -13,7 +14,9 @@ env:
   - secure: CnYfqVXx23U4jV68USpURjdhFuMW+ad1PuNaAJIOrUQidM67zziQHhsv+BSEBiBEpGRvGZ5r+tsaIbtuLD/ra0V10m/8v0MzjxM9TqoTc40HCBF6jb2E25fhsBX8hFdvTEw+oCHQyAUsrn9IgQsQheuNc52PNKJ3VtFa+ZrZDj8=
   - secure: UwNsKXQJBvzqdmdZmL2cnIxQ5Fb7wnK2Bczl2Y5y4Snksw/Bjv7ZIKxYLRUPpYHocjpBQvwa6C+ch9ow8ii8C8fFhPbzbhR0RGry1+HAnAIf3UHvNR38dySlBSvp9pI6aLNI1IoSIpenfNfgxhcdLQw17ByzT4qOI4IHZeweHo8=
 
-after_success:
-- openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in $GPG_DIR/pubring.gpg.enc -out $GPG_DIR/pubring.gpg -d
-- openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in $GPG_DIR/secring.gpg.enc -out $GPG_DIR/secring.gpg -d
-- mvn -P ossrh clean source:jar deploy --settings travis-settings.xml
+before_script:
+  - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in $GPG_DIR/pubring.gpg.enc -out $GPG_DIR/pubring.gpg -d
+  - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in $GPG_DIR/secring.gpg.enc -out $GPG_DIR/secring.gpg -d
+
+script:
+  - mvn -P ossrh clean source:jar deploy
