--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.ozwolf</groupId>
     <artifactId>dropwizard-raml-view</artifactId>
-    <version>1.0.0.1</version>
+    <version>2.0.1.0</version>
     <name>DropWizard RAML View</name>
     <description>A bundle for adding an human-readable view of a service's RAML specification</description>
     <url>https://github.com/ozwolf-software/dropwizard-raml-view</url>
@@ -23,16 +23,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Runtime Library Versions -->
-        <dropwizard.version>1.0.0</dropwizard.version>
+        <dropwizard.version>1.0.5</dropwizard.version>
         <commons.lang.version>3.1</commons.lang.version>
-        <commons.codec.version>1.7</commons.codec.version>
-        <raml.parser.version>0.8.14</raml.parser.version>
+        <commons.codec.version>1.10</commons.codec.version>
+        <raml.parser.version>1.0.4</raml.parser.version>
         <markdown4j.version>2.2-cj-1.0</markdown4j.version>
 
         <!-- Testing Library Versions -->
         <junit.version>4.12</junit.version>
-        <hamcrest.version>1.3</hamcrest.version>
-        <mockito.version>1.9.5</mockito.version>
+        <assertj.version>3.6.1</assertj.version>
+        <mockito.version>2.5.5</mockito.version>
+        <jsonassert.version>1.4.0</jsonassert.version>
 
         <!-- JavaDoc Information -->
         <javadoc.title>DropWizard RAML API Bundle</javadoc.title>
@@ -69,11 +70,17 @@
         <connection>scm:git:git://github.com/ozwolf-software/dropwizard-raml-view.git</connection>
         <developerConnection>scm:git:git@github.com:ozwolf-software/dropwizard-raml-view.git</developerConnection>
         <url>https://github.com/ozwolf-software/dropwizard-raml-view</url>
-        <tag>v1.0.0.1</tag>
+        <tag>v1.0.5.1</tag>
     </scm>
 
     <dependencies>
         <!-- Runtime Libraries -->
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-core</artifactId>
+            <version>${dropwizard.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-views</artifactId>
@@ -101,7 +108,7 @@
         </dependency>
         <dependency>
             <groupId>org.raml</groupId>
-            <artifactId>raml-parser</artifactId>
+            <artifactId>raml-parser-2</artifactId>
             <version>${raml.parser.version}</version>
             <exclusions>
                 <exclusion>
@@ -124,14 +131,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>${hamcrest.version}</version>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
@@ -139,6 +146,12 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-testing</artifactId>
             <version>${dropwizard.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>${jsonassert.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -159,7 +172,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>3.6.0</version>
                 <configuration>
                     <source>${compile.level}</source>
                     <target>${compile.level}</target>
@@ -168,7 +181,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
+                <version>2.10.4</version>
                 <configuration>
                     <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
                     <docletArtifact>
